syntax = "proto3";
option go_package = "github.com/hariprasanth3031/go-blog-service";

message PostDetails{
    uint64 Id=1;
    string Title=2;
    string Content=3;
    string Author=4;
    uint64 PublicationDate=5; 
    repeated string Tags=6;
}

message CreatePostRequest{
    PostDetails Post=1; 
}

message PostResponse{
    PostDetails Post=1;
    string Status=2; 
}

message PostId{
    int64 PostId = 1;
}

message UpdatePost{
    PostId Id = 1;
    PostDetails UpdateInput=2;
}

message DeletePost{
    string Status=1;
}

service Blogs {
    rpc Create(CreatePostRequest) returns(PostResponse);
    rpc Get(PostId) returns(PostResponse);
    rpc Update(UpdatePost) returns(PostResponse);
    rpc Delete(PostId) returns(DeletePost);
}